update login controller and something